# JrachkaTop

./: .pre-commit-config.yaml  ReadMe.md  docker-compose.yml  manage.py  pyproject.toml  test.json
JrachkaTop/: asgi.py  settings.py  urls.py  wsgi.py
JrachkaTop/ticket_service_api/: admin.py  apps.py  models.py  pdf_generator.py  serializer.py  tasks.py  urls.py  views.py
JrachkaTop/ticket_service_api/fixtures/: factory.py
JrachkaTop/ticket_service_api/management/commands/: create_mock_data.py
JrachkaTop/ticket_service_api/migrations/: 0001_initial.py  0002_alter_check_printer_id.py  0003_alter_check_pdf_file_alter_check_printer_id.py
JrachkaTop/ticket_service_api/templates/: client_check.html  kitchen_check.html
